--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/builder-vite": "^0.1.23",
     "@storybook/react": "^6.4.20",
     "@storybook/testing-library": "^0.0.9",
+    "@storybook/testing-react": "^1.2.4",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^14.0.4",
