--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "lint": "tsc --noEmit && eslint --max-warnings=0 ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
