--- a/package.json
+++ b/package.json
@@ -54,11 +54,15 @@
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
-    "msw": "^0.39.2",
+    "msw": "^0.36.8",
+    "msw-storybook-addon": "^1.6.1",
     "prettier": "^2.6.1",
     "prettier-plugin-sh": "^0.9.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
